<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/colorPrimary"
    >

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="378dp"
        android:layout_height="106dp"
        android:layout_marginTop="80dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="7dp"
        app:contentPadding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <TextView
            android:id="@+id/questionView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/QuestionText"
            android:textSize="18sp" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:fontFamily="@font/chewy"
        android:text="@string/title"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.475"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/conter_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.954"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:layout_constraintVertical_bias="0.178">

        <ImageButton
            android:id="@+id/prevButton"
            android:layout_width="41dp"
            android:layout_height="47dp"
            android:layout_marginEnd="25dp"
            android:backgroundTint="#A63838"
            android:contentDescription="@string/leftArrow"
            app:srcCompat="@drawable/abc_vector_test" />

        <Button
            android:id="@+id/trueButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="25dp"
            android:backgroundTint="#A63838"
            android:text="@string/button_true" />

        <Button
            android:id="@+id/falseButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:backgroundTint="#A63838"
            android:text="@string/button_false" />

        <ImageButton
            android:id="@+id/nextButton"
            android:layout_width="41dp"
            android:layout_height="47dp"
            android:layout_marginStart="25dp"
            android:backgroundTint="#A63838"
            android:contentDescription="@string/rightArrow"
            android:rotation="180"
            app:srcCompat="@drawable/abc_vector_test" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>